<resources>
    <string name="app_name">Battleship</string>
    <string name="back_button">Back</string>
    <string name="games_button">Games</string>
    <string name="game_details_title">Game Details</string>
    <string name="exit_button_text">Exit</string>
    <string name="help_button_text">Help</string>
    <string name="start_button_text">Start</string>
    <string name="help_text">HELP</string>
    <string name="help_contain_text">Battleship (also known as Battleships or Sea Battle) is a strategy type guessing game for two players. It is played on ruled grids (paper or board) on which each players fleet of warships are marked. The locations of the fleets are concealed from the other player. Players alternate turns calling shots at the other players ships and the objective of the game is to destroy the opposing players fleet. You can select in game features when clicking Start button in order to adapt the game to the user. This game is only developed to play vs IA. This is a modified version of the game because you will only be able to put ships horizontally. The ships will be put in the right of the block you select in the grid. That\'s all, enjoy!</string>
    <string name="back">BACK</string>
    <string name="configuration">CONFIGURATION</string>
    <string name="player_name">Enter player name</string>
    <string name="ten">10</string>
    <string name="thirteen">13</string>
    <string name="fifteen">15</string>
    <string name="ia_level">AI LEVEL</string>
    <string name="ocean_level">OCEAN LENGTH</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="ships_positions">Select ships positions</string>
    <string name="available_ships">Available ships</string>
    <string name="three_blocks">Three Blocks</string>
    <string name="four_blocks">Four Blocks</string>
    <string name="position_already_guessed">Position already guessed, select another one</string>
    <string name="winner">Winner:</string>
    <string name="send_mail">Send Email</string>
    <string name="enter_mail">Enter Email</string>
    <string name="new_game">New Game</string>
    <string name="exit">Exit</string>
    <string name="actual_turn">Actual turn</string>
    <string name="shot_down_ships">Shot down ships</string>
    <string name="reamining_ships">Remaining ships</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>