<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/mainImageGif"
        android:layout_width="900dp"
        android:layout_height="900dp"
        android:src="@drawable/pixelboat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pirata_one"
        android:text="@string/configuration"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/player_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerNameEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/pirata_one"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confText" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/oceanLevelId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupGrid"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/gridLengthTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata_one"
            android:text="@string/ocean_level"
            android:textColor="#FDFF3C00"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupGrid"
            app:layout_constraintStart_toStartOf="parent" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/oceanLengthGif"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ocean"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupGrid"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tenRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata_one"
            android:text="@string/ten"
            android:textSize="20dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/fifteenRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata_one"
            android:text="@string/fifteen"
            android:textSize="20dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/twentyRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata_one"
            android:text="@string/twenty"
            android:textSize="20dp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/iaLevelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGrid">

        <TextView
            android:id="@+id/iaLevelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ia_level"
            android:textColor="#FDFF3C00"
            android:textSize="25sp"
            android:layout_marginTop="8sp"
            android:fontFamily="@font/pirata_one"/>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/iaLevelGif"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/pirate"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/iaLevelRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iaLevelLayout">

        <RadioButton
            android:id="@+id/easyRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata_one"
            android:text="@string/easy_level"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/mediumRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata_one"
            android:text="@string/medium_level"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/hardRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirata_one"
            android:text="@string/hard_level"
            android:textSize="20dp"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        android:layout_width="118dp"
        android:layout_height="70dp"
        android:background="@drawable/buttonbarrel"
        android:text="@string/start_button_text"
        android:fontFamily="@font/pirata_one"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>