<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/helpButton"
        android:layout_width="118dp"
        android:layout_height="70dp"
        android:text="@string/help_button_text"
        android:fontFamily="@font/pirata_one"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="118dp"
        android:layout_height="70dp"
        android:text="@string/start_button_text"
        android:textSize="40sp"
        android:fontFamily="@font/pirata_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpButton" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="118dp"
        android:layout_height="70dp"
        android:text="@string/exit_button_text"
        android:textSize="40sp"
        android:fontFamily="@font/pirata_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/mainImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/appboat"
        app:layout_constraintBottom_toTopOf="@+id/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/pirata_one"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/helpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="410dp"
        android:layout_height="143dp"
        android:src="@drawable/imagegifboat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>