<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameactivity.fragment.GridsFragment">

    <GridView
        android:id="@+id/boardGridView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/iaBoardGridView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/woodSignBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/woodsign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/shotDownShipsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:fontFamily="@font/pirata_one"
        android:text="@string/shot_down_ships"
        android:textColor="#010A42"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/woodSignBoard"
        app:layout_constraintTop_toTopOf="@+id/woodSignBoard"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/remainingShipsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/pirata_one"
        android:text="@string/reamining_ships"
        android:textColor="#010A42"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/woodSignBoard"
        app:layout_constraintTop_toTopOf="@+id/woodSignBoard"
        app:layout_constraintVertical_bias="0.676" />

    <TextView
        android:id="@+id/actualTurnTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pirata_one"
        android:text="@string/actual_turn"
        android:textColor="#010A42"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/woodSignBoard"
        app:layout_constraintStart_toStartOf="@+id/woodSignBoard"
        app:layout_constraintTop_toTopOf="@+id/woodSignBoard"
        app:layout_constraintVertical_bias="0.478" />

</androidx.constraintlayout.widget.ConstraintLayout>