<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinnerActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/mainImageGif"
        android:layout_width="900dp"
        android:layout_height="900dp"
        android:src="@drawable/pixelboat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#00F86031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolBar"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/winnerposter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/winnerboat"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.756" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColorHint="#000000"
        android:outlineSpotShadowColor="#FFFFFF"
        android:hint="@string/enter_mail"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerNameEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/pirata_one"
            android:inputType="textEmailAddress"
            android:background="#CEED4C34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confText" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mailButton"
        android:layout_width="130dp"
        android:layout_height="61dp"
        android:background="@drawable/buttonbarrel"
        android:fontFamily="@font/pirata_one"
        android:text="@string/send_mail"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newGameButton"
        android:layout_width="260dp"
        android:layout_height="61dp"
        android:background="@drawable/buttonbarrel"
        android:fontFamily="@font/pirata_one"
        android:text="@string/new_game"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exitButton"
        android:layout_width="260dp"
        android:layout_height="61dp"
        android:background="@drawable/buttonbarrel"
        android:fontFamily="@font/pirata_one"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton" />

    <TextView
        android:id="@+id/winnerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/pirata_one"
        android:text="@string/winner"
        android:textColor="#000000"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLogsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:outlineSpotShadowColor="#FFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/logsEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="#CEED4C34"
            android:fontFamily="@font/pirata_one"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confText" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>